--- a/intime/src/main/resources/application.yml
+++ b/intime/src/main/resources/application.yml
@@ -1,6 +1,30 @@
+server:
+  port: 8000
+  servlet:
+    context-path: /
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
-    username: cos
-    password: ss9799
+    url: jdbc:mysql://localhost:3306/intimeDB?serverTimezone=Asia/Seoul
+    username: intime
+    password: intime123
+    
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      use-new-id-generator-mappings: false
+    show-sql: true #console에 sql 출력
+    properties:
+      hibernate.format_sql: true #console에 sql 출력시 깔끔하게 정렬되서 출력
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
